<resources>
    <string name="app_name">Marvel</string>
    <string name="presentation">Don\'t waste time and access your favorite marvel comics in a practical and fast way</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="enter">ENTER</string>s
    <string name="username">Username</string>
    <string name="enter_username">enter your username</string>
    <string name="password">Password</string>
    <string name="enter_password">enter your password</string>
    <string name="select_image">select a image</string>
    <string name="home">HOME</string>
    <string name="caracters">CARACTERS</string>
    <string name="comics">COMICS</string>
    <string name="creators">CREATORS</string>
    <string name="events">EVENTS</string>
    <string name="series">SERIES</string>
    <string name="stories">STORIES</string>
    <string name="home_minus">Home</string>
    <string name="caracters_minus">Caracters</string>
    <string name="comics_minus">Comics</string>
    <string name="creators_minus">Creators</string>
    <string name="events_minus">Events</string>
    <string name="series_minus">Series</string>
    <string name="stories_minus">Stories</string>
    <string name="know_more_caracter">Know More Caracter</string>
    <string name="know_more_comic">Know More Comic</string>
    <string name="know_more_creator">Know More Creator</string>
    <string name="know_more_event">Know More Event</string>
    <string name="know_more_serie">Know More Serie</string>
    <string name="know_more_storie">Know More Storie</string>
    <string name="titulo">Título</string>
    <string name="name">Name</string>
    <string name="description">description substring concatenated with "..."</string>
    <string name="description_complete">description complete</string>
    <string name="know_more">Know More</string>
    <string name="search_placeholder">search for filter name</string>
    <string name="search_label">Search</string>
    <string name="search_all">All</string>
    <string name="filter_label">Filter</string>
    <string name="format_label">format</string>
    <string name="prices">Prices</string>
    <string name="ebook">ebook</string>
    <string name="physical">physical</string>
    <string name="type">type</string>
    <string name="value">value</string>
    <string name="number_pages">number of pages</string>
    <string name="example_number">120</string>
    <string name="example_value1">53.4</string>
    <string name="example_value2">75.9</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="date_complete">dd/mm/yyyy</string>
    <string name="date_year">yyyy</string>
</resources>