<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="24dp">

        <LinearLayout
            android:id="@+id/box_register_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99000000"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <View
                android:id="@+id/view_activity_register3"
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/view5"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:background="@drawable/user_icon" />

                    <View
                        android:id="@+id/view_activity_register"
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:text="@string/select_image"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_activity_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:text="@string/username"
                        android:textColor="#FCFFFFFF" />

                    <View
                        android:id="@+id/view_activity_register2"
                        android:layout_width="match_parent"
                        android:layout_height="4dp" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress_activity_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/enter_username" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:text="@string/password"
                        android:textColor="#FCFFFFFF" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="4dp" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:text="@string/enter_password" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#994200FF"
                android:text="@string/register"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>